fixed scrollbar

--- a/other/main.css
+++ b/other/main.css
@@ -3,6 +3,7 @@ html {
   height: 100%;
   background: url('/images/03_rainbow_galaxy.png') no-repeat center top fixed;
   background-size: cover;
+  overflow-y: scroll;
   }
 
   body::before{
